fixing parallax covering up on mobile

--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -65,7 +65,7 @@ li:hover {
 }
 #nav-wrapper:hover {
   .menu-blob {
-  transform: scale(1.3);
+  transform: scale(1.3) rotate(50deg);
   opacity: 1;
 }
 
