--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -241,7 +241,7 @@ h1 {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
+  font-size: modular-scale(4, 1em 1.6em, $golden);
   line-height: 1.1;
 }
 h2 {
@@ -253,12 +253,10 @@ h2 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: $darkcloud;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.62671rem;
+  font-size: modular-scale(3, 1em 1.6em, $golden);
   line-height: 1.1;
 }
 h3 {
@@ -271,11 +269,9 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.38316rem;
+  font-size: modular-scale(2, 1em 1.6em, $golden);
   line-height: 1.1;
 }
 h4 {
@@ -288,11 +284,9 @@ h4 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1rem;
+  font-size: modular-scale(1, 1em 1.6em, $golden);
   line-height: 1.1;
 }
 h5 {
@@ -305,8 +299,6 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
@@ -321,9 +313,6 @@ h6 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
@@ -701,10 +690,6 @@ pre tt:after {
 }
 
 body {
-  ul {
-    list-style-type: none;
-    margin: 1rem 0;
-  }
   a {
     @include easeinout;
     font-weight: bold;
@@ -740,11 +725,11 @@ body {
 
 // footer 
 footer.site-footer {
-  min-height: 80vh;
+  min-height: 100vh;
   width: 100vw;
   background-image: url("../assets/footer-blob.svg");
-  background-size: cover;
-  background-position: left top;
+  background-size: clamp(800px, 100vw, 100vw);
+  background-position: left bottom;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -809,4 +794,49 @@ footer.site-footer {
 
 .edge--both--reverse {
   @include angle(both, true);
+}
+
+// link underlining
+
+body {
+  section, main {
+      a {
+      display: inline-block;
+      position: relative;
+    }
+    a:not(.btn) {
+      &:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0px;
+  left: 0;
+  background-color: $darkcloud;
+  background: $darkcloud;
+  visibility: invisible;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+  align-self: center;
+  text-align: center;
+}
+
+&:hover:before {
+  background-color: $lightcloud;
+  background: $lightcloud;
+  visibility: visible;
+  width: 100%;
+}
+
+    }
+
+    }
+
+ul {
+  list-style-type: disc;
+}
+
+li::marker {
+  color: $lightcloud;
+}
 }
